--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "main": "server.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon src/server.ts",
-    "build": ""
+    "dev": "nodemon src/server.ts --ignore __tests__",
+    "build": "node src/server.ts",
+    "test": "jest"
   },
   "devDependencies": {
+    "@sucrase/jest-plugin": "^2.0.0",
     "@types/express": "^4.17.1",
+    "@types/jest": "^24.0.18",
     "@typescript-eslint/eslint-plugin": "^2.3.3",
     "@typescript-eslint/parser": "^2.3.3",
     "eslint": "^6.5.1",
@@ -19,6 +22,7 @@
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
+    "jest": "^24.9.0",
     "nodemon": "^1.19.3",
     "prettier": "^1.18.2",
     "sucrase": "^3.10.1",
