--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon src/server.ts --ignore __tests__",
-    "build": "node src/server.ts",
+    "build": "tsc && node dist/server.js",
     "test": "jest"
   },
   "devDependencies": {
     "@sucrase/jest-plugin": "^2.0.0",
-    "@types/express": "^4.17.1",    
+    "@types/express": "^4.17.1",
     "@typescript-eslint/eslint-plugin": "^2.4.0",
     "@typescript-eslint/parser": "^2.4.0",
     "@types/jest": "^24.0.18",
